# timer-rs

./: Cargo.toml  LICENSE  README.md  REAME.md
.github/workflows/: main.yml
examples/: async_timeout.rs  interval.rs  timeout.rs
src/: lib.rs  time.rs
