[package]
name = "swnb-timer"
version = "0.1.2"
edition = "2021"
description = "timer can register timeout callback"
license-file = "LICENSE"
repository = "https://github.com/swnb/timer-rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
