[package]
name = "swnb-timer"
version = "0.2.0"
edition = "2021"
keywords = ["timeout", "interval", "async", "timer"]
description = "lib that can register both timeout and interval callback,support sync and async style api"
license-file = "LICENSE"
repository = "https://github.com/swnb/timer-rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
